# PDFExtractor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt  run_public_api.ps1
docs/: documentacion_tecnica_programador_raloe_crono.md  generar_pdf_esquema_er_contratos.py  generar_pdfs_documentacion.py  guia_desde_cero_extractor_pdf.txt  pipeline_extraccion_pdf.txt
scripts/: build_client_exe.ps1  diagnosticar_pdf_ocr_pedido.py  extractor_pdf_client.py  probar_qwen_vl_discrepancias.py  probar_smolvlm_recorte.py  run_api_8001.py  test_diagnostico.ps1  test_llm.ps1  test_ocr.ps1  test_rapidos.ps1  test_todos.ps1
tests/: ocr_debug_helpers.py  test_api_extraer_felesa_crono.py  test_api_extraer_raloe_crono.py  test_campos_extra_y_checks.py  test_comparador_pdf_ocr.py  test_contrato_campos.py  test_detector_ocr_pagina_tecnica.py  test_detector_pagina_foso_huida_opciones.py  test_detector_pagina_premontada_armario_botoneras.py  test_detector_pagina_tecnica.py  test_detector_paginas_felesa_crono.py  test_diagnostico_pdf_ocr.py  test_extractor_foso_huida_opciones.py  test_extractor_observaciones_resumen.py  test_extractor_pagina_tecnica.py  test_extractor_premontada_armario_botoneras.py  test_extractor_visual_tesseract.py  test_extraer_raloe_crono_actual.py  test_lector_pymupdf_checks.py  test_lector_pymupdf_pagina_5.py  test_notas_extra.py  test_ocr_contract_foso_opciones.py  test_ocr_contract_page_5.py  test_paginas_anuladas.py  test_pipeline_ocr_pagina_tecnica.py  test_resolucion_discrepancias_llm.py
vis_labview/: curl_equivalente.ps1  (+3 more)
(+111 files in other folders)
