[project]
name = "extractor-pdf"
version = "0.1.0"
description = "API para extraer datos estructurados desde PDFs de pedidos"
requires-python = ">=3.10,<3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
